--- a/08fullpage02/test.html
+++ b/08fullpage02/test.html
@@ -258,24 +258,53 @@
                 <a href="#">제네시스 멤버십</a>
             </div>
         </div>
-    </div>
-    <footer id="footer">
-        <div class="btmMenu">
-            <ul>
-                <li>사이트맵</li>
-                <li>이용약관</li>
-                <li>개인정보 처리방침</li>
-                <li>저작권 안내</li>
-                <li>보증안내</li>
-                <li>자동차 교환 및 환불 중재 규정 안내</li>
-                <li>하자 재발 통보 안내</li>
-            </ul>
-            <ul>
-                <li><img src="images/ins.png" alt=""></li>
-                <li><img src="images/fb.png" alt=""></li>
-                <li><img src="images/yt.png" alt=""></li>
-            </ul>
+        <div class="section page4" data-anchor="m4st">
+            <div class="footer">
+                <div class="btmMenu d-flex">
+                    <ul class="d-flex text-white p-3">
+                        <li>사이트맵</li>
+                        <li>이용약관</li>
+                        <li>개인정보 처리방침</li>
+                        <li>저작권 안내</li>
+                        <li>보증안내</li>
+                        <li>자동차 교환 및 환불 중재 규정 안내</li>
+                        <li>하자 재발 통보 안내</li>
+                    </ul>
+                    <ul class="d-flex p-3">
+                        <li class="px-2"><img src="images/ins.png" alt=""></li>
+                        <li class="px-2"><img src="images/fb.png" alt=""></li>
+                        <li class="px-2"><img src="images/yt.png" alt=""></li>
+                    </ul>
+                </div>
+                <div class="btmbbs">
+                    <ul>
+                        <li>
+                            <img src="images/image 2.png" alt="">
+                            제네시스 챔피언십
+                        </li>
+                        <li>
+                            <img src="images/image 2.png" alt="">
+                            제네시스 부티크
+                        </li>
+                        <li>
+                            <img src="images/image 2.png" alt="">
+                            네비게이션 업데이트
+                        </li>
+                        <li>
+                            <img src="images/image 2.png" alt="">
+                            제네시스 드라이빙 아카데미
+                        </li>
+                    </ul>
+                    <ul>
+                        <li>
+                            <img src="images/image 2.png" alt="">
+                            관리증명 사이버 감사실
+                        </li>
+                        <li><img src="" alt=""></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-    </footer>
+    </div>
 </body>
 </html>
